fix too much touch issue (WIP)

--- a/apps/display_mam2022/style.css
+++ b/apps/display_mam2022/style.css
@@ -75,7 +75,7 @@ img{
 }
 
 /*PAGES*/
-.page{
+.pages{
   position: absolute;
   top:0;
   left:0;
